[package]
name = "bevy_ios_app_delegate"
version = "0.3.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_app_delegate"
repository = "https://github.com/rustunit/bevy_ios_app_delegate"
keywords = ["bevy", "gamedev", "mobile", "ios", "objc"]
description = "Bevy Plugin to receive iOS AppDelegate callbacks"

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_channel_trigger = "0.5"
bevy_ecs = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-ui-kit = "0.3.1"
